# sockets-rs

./: Cargo.toml
src/: main.rs
src/config/: websocket.rs
src/entities/: socket.rs
src/services/: mod.rs  socket_service.rs
